[build-system]
# Must be kept in sync with `setup_requirements` in `setup.py`
requires = [
    "setuptools>=40.8.0",
    "wheel",
    "cffi>=1.4.1; python_implementation != 'PyPy'",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
target-version = ["py36"]

[tool.mypy]
show_error_codes = true
warn_redundant_casts = true
warn_incomplete_stub = true

disallow_any_unimported = true
disallow_any_expr = true  # overridden to `false` inside `nacl.bindings`
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

no_implicit_optional = true

warn_unused_ignores = true
warn_no_return = true
warn_return_any = true  # overridden to `false` inside `nacl.bindings`
warn_unreachable = true

no_implicit_reexport = true
strict_equality = true

# Include test files manually for now. Can tidy up later.
files = [
    "src/nacl",
    "tests/test_aead.py",
    "tests/test_bindings.py",
    "tests/test_box.py",
    "tests/test_encoding.py",
    "tests/test_exc.py",
    "tests/test_generichash.py",
    "tests/test_hash.py",
    "tests/test_hashlib_scrypt.py",
    "tests/test_kx.py",
    "tests/test_public.py",
    "tests/test_pwhash.py",
    "tests/test_sealed_box.py",
    "tests/test_secret.py",
    "tests/test_secretstream.py",
    "tests/test_signing.py",
    "tests/utils.py",
]

[[tool.mypy.overrides]]
module = [
    "nacl._sodium",
]
ignore_missing_imports = true

# Within `nacl.bindings`, all of the C functions exposed via cffi in
# nacl._sodium return `Any` as far as mypy is concerned. It's not worth it to
# stub the C functions or cast() their uses. But this means there are more
# `Any`s floating around. So the more restrictive any checks we'd like to use
# should only be turned on outside of `bindings`.

[[tool.mypy.overrides]]
module = [
    "nacl.bindings.*",
]
disallow_any_expr = false
warn_return_any = false

# Loosen some of the checks within the tests.
# For now this is an explicit list rather than a wildcard "test.*", to make
# it a little easier to run the strict checks on modules first. We can clean
# this up later. Note that we _do_ run the strict checks on `test.utils`.

[[tool.mypy.overrides]]
module = [
    "tests.test_aead",
    "tests.test_bindings",
    "tests.test_box",
    "tests.test_encoding",
    "tests.test_exc",
    "tests.test_generichash",
    "tests.test_hash",
    "tests.test_hashlib_scrypt",
    "tests.test_kx",
    "tests.test_public",
    "tests.test_pwhash",
    "tests.test_signing",
    "tests.test_sealed_box",
    "tests.test_secret",
    "tests.test_secretstream",
]
# Some library helpers types' involve `Any`, in particular `pytest.mark.parameterize`
# and `hypothesis.strategies.sampledfrom`.
disallow_any_expr = false
disallow_any_decorated = false

# It's not useful to annotate each test function as `-> None`.
disallow_untyped_defs = false
disallow_incomplete_defs = false
